# BrainIAC

./: pyproject.toml
src/BrainIAC/: quickstart.ipynb  utils.py
src/BrainIAC/MCIclassification/: infer_mci.py
src/BrainIAC/OverallSurvival/: infer_os.py  os_utils.py  train_os.py
src/BrainIAC/SequenceClassification/: infer_sequence.py
src/BrainIAC/data/csvs/: os.csv
