[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "brainiac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autograd==1.7.0",
    "matplotlib==3.7.1",
    "monai==1.3.2",
    "nibabel==5.2.1",
    "numpy==1.23.5",
    "pydicom>=3.0.1",
    "pytorch-lightning==2.3.3",
    "scikit-image==0.21.0",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "simpleitk==2.4.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.5",
]


[project.scripts]
get_brainiac_features = "src.BrainIAC.get_brainiac_features:main"


[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]
